--- a/app/src/main/res/layout/fragment_sudoku.xml
+++ b/app/src/main/res/layout/fragment_sudoku.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,34 +16,40 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:stretchColumns="*"
-            android:divider="@color/divider_color"
-            android:showDividers="middle">
+            android:stretchColumns="*">
         </TableLayout>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/bt_solve"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/solve"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_marginBottom="8dp"
             android:layout_gravity="center"
             android:orientation="horizontal">
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/bt_reset"
+                android:id="@+id/bt_clear"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_weight="1"
                 android:layout_marginEnd="8dp"
-                android:text="@string/reset"/>
+                android:text="@string/clear"/>
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/bt_solve"
-                android:layout_width="wrap_content"
+                android:id="@+id/bt_reset"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                android:text="@string/solve"/>
+                android:layout_weight="1"
+                android:enabled="false"
+                android:text="@string/reset"/>
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
