--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <resources>
-    <dimen name="sudoku_border_thin">1dp</dimen>
-    <dimen name="sudoku_border_thick">2dp</dimen>
+    <dimen name="cell_border_thin">1dp</dimen>
+    <dimen name="cell_border_thick">2dp</dimen>
+    <dimen name="cell_border_margin">2dp</dimen>
 </resources>
