--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,7 @@
         <item name="colorPrimary">@color/primary_color</item>
         <item name="colorPrimaryDark">@color/primary_color_dark</item>
         <item name="colorPrimaryVariant">@color/primary_color_dark</item>
+        <item name="android:textColor">@color/primary_text_color</item>
         <item name="colorOnPrimary">@color/white</item>
         <item name="colorSecondary">@color/accent_color</item>
         <item name="colorOnSecondary">@color/secondary_text_color</item>
