--- a/app/src/main/res/layout/fragment_sudoku.xml
+++ b/app/src/main/res/layout/fragment_sudoku.xml
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/solve" />
+            android:text="@string/sudoku_action_solve" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -40,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:layout_weight="1"
-                android:text="@string/clear" />
+                android:text="@string/sudoku_action_clear" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btReset"
@@ -49,7 +49,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:enabled="false"
-                android:text="@string/reset" />
+                android:text="@string/sudoku_action_reset" />
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
